more styling updates, scrollbar no longer shifts page

--- a/client/main.css
+++ b/client/main.css
@@ -4,4 +4,5 @@ body {
   padding: 1em;
   font-family: sans-serif;
   color: 'black';
+  margin-left: calc(100vw - 100%);
 }
